css/main.css
/* ... */
footer p {
  margin-top: 30px;
  text-align: center;
}

#main-menu {
  color: rgb(51, 40, 18);
  position: relative;
  z-index: 3;
}

#main-menu a {
	color: rgb(51, 40, 18);
	padding: 2px 4px;
	margin-left: 4px;
}

@media screen and (min-width: 768px) {
	#main-menu a {
		padding: 4px 10px;
	}
}

#main-menu a:hover {
  background-color: transparent;
  color: rgb(115, 90, 41);
  outline: none;
}

#main-menu a:visited,
#main-menu a:focus {
  background-color: transparent;
  outline: none;
}

#main-menu .dropdown-menu {
  background-color: rgb(255, 255, 255);
  border: none;
  color: white
  right: 0px;
  left: auto;
}

.container-fluid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding: 0;
}


@media screen and (min-width: 768px) {
  .container-fluid {
    width: 80%;
  }
}

.container-margin-sm {
  width: 92%;
}

#main-menu {
  background-color: rgb(255, 255, 255);
  width: 100%;
  height: 60px;
  padding: 15px 1%;
}

@media screen and (min-width: 768px) {
  #main-menu {
    padding-left: 10%;
    padding-right: 10%;
  }
}

#main-menu ul.nav.nav-pills > li {
  float: right;
}

.inline-list,
.product-listing,
.no-list-style,
.unstyled li
form li {
  list-style-type: none !important;
}

.form-group {
	width: 100%;
}

.inline-list,
.product-listing {
  padding: 0;
}

.inline-list li {
  display: inline-block;
}

footer .inline-list li {
	display: block;
}

@media screen and (min-width: 768px) {
	footer .inline-list li {
		display: inline-block;
	}
}

.product-listing li {
	display: inline-block;
	vertical-align: top;
	margin-right: 0.4em;
	width: 48.3%;
}

.product-listing li:last-child {
	margin-right: 0;
}

@media screen and (min-width: 768px) {
	.product-listing li {
	  width: 23.802%;
	}
}


.product-listing-card img.product-listing-image {
	/*width: 20%;*/
	min-width: 100%;
	max-width: inherit;
	height: auto;
}

.product-listing-detail {
  font-size: 0.8em;
}

@media screen and (min-width: 768px) {
	.edit-profile,
	.edit-product {
		text-align: right;
	}
}

#store-view .product-listing-detail {
	position: relative;
}

#store-view .product-listing-detail .product-price {
	position: absolute;
	right: 0;
}

.edit-profile img,
.edit-product img {
	max-width: 200px;
	height: auto;
}

.edit-profile figcaption,
.edit-product figcaption {
	text-align: center;
	margin-left: 4em;
}

@media screen and (max-width: 768px) {
	.edit-product figcaption {
		margin: 0;
	}
}

@media screen and (min-width: 768px) {
  .inline-list {
    padding: inherit;
  }

  .inline-list li {
    margin-left: 30px;
  }
}

.inline-list li:first-child {
  margin-left: 0;
}

#outputArea {
  margin: 0 !important;
  /*padding: 1em;*/
  border-radius: 3px;
  margin-top: 10px;
}
@media screen and (min-width: 768px) {
	.alert-message {
		width: 60%;
		margin-left: 16em;
		margin-bottom: 160px;
		margin-top: -10px;
	}
}

a:hover {
  text-decoration: none !important;
}

#farm-to-you-logo a {
	font-size: 1.1em;
	font-family: serif;
}

@media screen and (min-width: 768px) {
  #farm-to-you-logo a {
    font-size: 2em;
  }
}

#farm-to-you-logo a:hover {
  text-decoration: none;
  border: none;
}

#farm-to-you-logo a,
#farm-to-you-logo a:hover {
  color: rgb(115, 90, 41);
}

.delete-item {
  font-size: 2em;
}

/********************************************
* forms
********************************************/
@media screen and (min-width: 768px) {
	.option-menu {
		margin-left: 196px;
	}
}

.sign-up-form,
.signIn-form,
.activation-form ,
.sign-out-form {
	background-color: rgba(255, 255, 255, 0.8);
	margin: auto;
	width: 70%;
	margin-top: 20%;
	position: relative;
	color: rgba(115, 90, 41, 0.8);
	font-size: 1em;
	border: 1px rgb(51, 40, 18);
	border-radius: 12px;
	padding: 2em;
	text-align: center;
}

form {
	margin-bottom: 10px;
}

form label {
	min-width: 100%;
}

form input[type=file] {
	margin-left: 13px;
	display: inherit;
}

@media screen and (max-width: 768px) {
	form input[type=file] {
		margin: 0;
	}
}

	form input[type=text],
form input[type=password]{
	margin-left: 0;
	/*width: 100%;*/
}

.user-account input[type=radio] {
	margin-left: 0;
}

.user-account .input-tag {
	width: 120px;
}

@media screen and (max-width: 768px) {
	.sign-up-form,
	.signIn-form {
		padding: 0;
	}
}

@media screen and (min-width: 768px) {
	.sign-up-form,
	.signIn-form {
		margin-top: 20%;
		text-align: inherit;
	}

	form label {
		min-width: 180px;
		text-align: right;
	}

	.user-account textarea,
	.user-account input[type=text],
	.user-account textarea,
	#edit-product.user-account textarea,
	#add-product.user-account textarea,
	.user-account input[type=password],
	.user-account input[type=number] {
		margin-left: 1em;
		width: 50%;
		max-width: 50%; /* for the resize of the text area */
	}

	.user-account .input-tag {
		width: 100px !important;
	}

	.user-account input[type=radio] {
		margin-left: 1em !important;
	}

	.sign-up-form input[type=text],
	.sign-up-form input[type=password],
	.signIn-form input[type=text],
	.signIn-form input[type=password] {
		margin-left: 1em;
		min-width: 60%;
	}

	.sign-up-form #submit,
	.signIn-form #submit {
		width: 40%;
		margin-left: 30%;
	}

	.user-account [type=submit] {
		width: 50%;
		margin-left: 197px;
	}
}

.form-control-custom {
	height: 34px;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.42857;
	color: #555;
	background-color: #FFF;
	background-image: none;
	border: 1px solid #CCC;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
}
.transparent-form {
  background-color: rgb(255, 255, 255);
  text-align: center;
  margin-top: 4%;
  margin-bottom: 2%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-size: .8em;
  border: 1px rgb(51, 40, 18);
  border-radius: 5px;
  padding: 2em;
}

@media screen and (min-width: 768px) {
	.transparent-form {
		text-align: inherit;
		font-size: 1em;
		border-radius: 12px;
		margin-top: 4%;
  }
}
/* ... */

